--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,332 @@
 
 html { margin-left: calc(100vw - 100%); } /* prevents 'jumping' caused by scroll bar */
 
-body {
-  background: #ccc;
-}
   
+@import url('https://fonts.googleapis.com/css?family=Handlee|Raleway:300');
+
+$gray1:  #555;
+$gray2:  #999;
+$gray3:  #aaa;
+$gray4:  #ccc;
+$gray5:  #eaeaea;
+$gray6:  #f1f1f1;
+$gray7:  #f8f8f8;
+$gray8:  #777;
+$blue:   #1E76D4;
+$blue2: $blue * .9;
+$blue3: green; /* bootstrap */
+/*$blue3: #007bff;*/ /* bootstrap */
+$blue5:   #1E76D4;
+$blue15: #4f9ce8;
+
+
+a {
+  color: $blue;
+}
+
+
+table.table-striped>tbody>tr:nth-child(odd)>td,
+table.table-striped>tbody>tr:nth-child(odd)>th,
+tr.found{
+    background-color: $gray7; 
+}
+
+.ic4f-h-filter-container {
+  margin-bottom: 1em;
+  text-align: center;
+
+  select, option {
+    font-size: .9em;
+  }
+}
+
+table.ic4f-projects {
+  font-size: .9em;
+
+  th {
+    white-space: nowrap;
+  }
+
+  td {
+    padding: 6px;
+  }
+  
+  .cell-project {
+    color: #666;
+
+    a {
+      color: $blue2;
+      display: block;
+    }
+    a:hover {
+      color: $blue * 1.3; /* because i think this needs to be brighter */
+      text-decoration: none;
+
+      .project-comment-repo {
+        color: $blue3;
+        text-decoration: none;
+      }
+    }
+
+  }
+
+  .cell-years {
+    text-align: center;
+    white-space: nowrap;
+  }
+
+  .cell-db {
+    text-align: center;
+    width: 5em;
+  }
+
+  .project-name {
+    font-weight: bold;
+    display: block;
+    line-height: 1.3em;
+  }
+
+  .project-count {
+    @extend .project-name;
+    white-space: nowrap;
+    font-size: 0.8em;
+  }
+
+  .project-comment-repo {
+    color: $blue;
+    font-size: 0.8em;
+    display: block;
+    line-height: 1em;
+  }
+
+  .project-comment-oldcode {
+    @extend .project-comment-repo;
+    color: $gray8;
+  }
+}
+
+.ic4f-contact-row {
+  text-align: right;
+  margin-top: 8px;
+  visibility: hidden; /* TODO */
+
+  a {
+    color: $gray3;
+    display: inline-block;
+    font-size: .8rem;
+    padding: 0 10px 0 0;
+    margin: 0;
+  }
+  a:hover {
+    color: $blue;
+  }
+}
+
+.ic4f-logo-row {
+  margin-top: 0px;
+
+  a.ic4f-logo {
+    font-size: 3rem;
+    color: #999;
+  }
+
+  a.ic4f-logo:hover {
+    text-decoration: none;
+    color: $blue;
+
+    .part-c,
+    .part-ode {
+      color:$gray8;
+    }
+  }
+
+  .part {
+    font-size: .7rem;
+  }
+
+  .part-c {
+    color: $blue5;
+    opacity: .8;
+  }
+
+  .part-ode {
+    @extend .part;
+    margin-left: -1px;
+    margin-right: -5px;
+    color: $blue5; 
+  }
+
+  .part-dot {
+    @extend .part;
+    margin-left: -3px;
+  }
+  
+  .part-un {
+    @extend .part;
+    margin-left: -3px;
+  }
+}
+
+.ic4f-nav {
+/*  font-family: 'Raleway', sans-serif; */
+  font-size: 1.1rem;
+  padding: 0;
+  text-align: right;
+  margin-top:10px;
+
+  a {
+    color: #aaa;
+    margin: 0;
+    padding: .2rem .5rem;
+    text-decoration: none;
+  }
+  a:hover {
+    color: $blue; 
+
+    border-top: 1px solid $gray5;
+  }
+  a.active {
+    color: $blue5;
+    font-weight: normal;
+  }
+  a.active:hover {
+  }
+}
+
+
+
+
+
+body {
+  color: $gray1;
+  font-family: verdana, sans-serif;
+  font-size: .95rem;
+  line-height: 1.4rem;
+}
+
+.ic4f-container {}
+
+.ic4f-main-heading {
+  margin: .3em 0 1em 0;
+}
+
+
+.ic4f-hline {
+  background: $gray5;
+  height: 1px;
+}
+
+.ic4f-content {
+  margin-bottom: 1rem;
+  margin-top: 1.8rem;
+
+  img {
+    border: 1px solid $gray2;
+  }
+}
+
+.ic4f-footer {
+  color: $gray2;
+  font-size: .8rem;
+  padding-bottom: 1.5rem;
+  padding-top: .7rem;
+  text-align: right;
+}
+
+
+
+
+h1 {
+  color: #666;
+  font-size: 1.6rem;
+}
+
+h2 {
+  @extend h1;
+  font-size: 1.3rem;
+}
+
+h3 {
+  @extend h1;
+  font-size: 1.1rem;
+}
+
+h4, h5, h6 {
+  @extend h1;
+  font-size: 1rem;
+  margin-bottom: 0;
+  font-weight: bold;
+}
+
+
+.ic4f-blog-date {
+  color: $gray2;
+  font-size: .8rem;
+  margin: -10px 0 5px 0;
+}
+
+.ic4f-blog-list-date {
+  color: $gray2;
+  font-size: .8rem;
+  margin-bottom: 0;
+  line-height: 1rem;
+}
+
+.ic4f-blog-list-excerpt {
+  font-size: .9rem;
+}
+
+.ic4f-blog-list-more {
+  font-size: .8rem;
+}
+
+.ic4f-blog-list-title {
+  font-size: 1.1rem;
+  margin: 0;
+
+  a {
+    color: $blue;
+  }
+  a:hover {
+    color: red; 
+  }
+}
+
+.ic4f-blog-sidebar {
+
+  h2 {
+    font-size: 1rem;
+    color: $gray2;
+  }
+
+  ul {
+    font-size: .8rem;
+    line-height: 1rem;
+    padding-left: 1.1rem;
+  }
+
+  li {
+    margin-bottom: .5rem;
+
+    a.active {
+      color: $blue;
+    }
+    a.active:hover {
+      color: red;
+    }
+  }
+
+  li:last-child {
+    list-style: none;
+
+    a {
+      color: $gray2;
+    }
+    a:hover {
+      color: $blue;
+    }
+  }
+}
+
+
 
