Add project groups to project list display; refactor/cleanup.

--- a/src/app/projects/project-detail.component.html
+++ b/src/app/projects/project-detail.component.html
@@ -4,7 +4,7 @@
 <p>What is this: A system for processing large email archives and building collections for eDiscovery research. Used to build the Avocado email research collection (published by the Linguistic Data Consortium).
 
 
-<p><a href="https://github.com/ic4f/pluto/blob/master/python/distro/builder.py">sample code: pst extraction script</a>
+<p><a target="_blank" href="https://github.com/ic4f/pluto/blob/master/python/distro/builder.py">sample code: pst extraction script</a>
 
 <p><b>Developed:</b> 2011-2012 (E-Discovery Lab, University of Maryland, College Park)
 
