--- a/src/app/projects/project-list.component.html
+++ b/src/app/projects/project-list.component.html
@@ -1,12 +1,9 @@
 <ng-container *ngIf="projects">
 
-  Text about project groups and what all this is goes here. How they are organized, and why some have
-  a lot (30, 32) and some just one - because they are different types of stuff. And that some are cool
-  (edisco, orm, playerc), and some are boring (static, cms).
-  <p>A few projects have <b>show more</b> links - these will expand to display more
-technical detail, sample code, links to publications, screenshots... <br><br>
-
-does not include individual apps (registration, donate, this and that - for prsa and uni)
+  <p>This list is approximate. Some projects are tiny, yet delightful is some way (tree traversals in
+Java, publication list generator in Ruby, Vim plugins), others can be large but similar (all the
+content management systems). But the list is representative of what I've built so far.
+  </p>
 
 
   <div class="form-row ic4f-h-filter-container">
