Remove dynamic pages for now (see note).
I only have one page and one blog post. Whereas the blog will be getting
more posts, I am not so sure about the pages. So I might not need it.
Simplifying for now; I can always add more complexity if I need to.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,13 +41,6 @@
 
 <div class="container ic4f-container">
   <div class="row">
-    <div class="col ic4f-footer">
-      Site modified:...
-    </div>
+    <div class="col ic4f-footer"></div>
   </div>
 </div>
-
-<div id="modal">
-  <div id="modal-caption"></div>
-</div>
-
