--- a/src/styles.scss
+++ b/src/styles.scss
@@ -522,6 +522,25 @@ table.tablesummary td {
 
 
 
+.ic4f-sergey {
+
+  text-align: center;
+  img {
+    width: 85%;
+  }
+
+  ul {
+    padding: 0;
+    margin-top: 1em;
+  }
+  li {
+    display: inline-block;
+    margin-left: .8em;
+    margin-right: .8em;
+  }
+}
+
+
 
 
 
