--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,10 @@
-<div class="container ic4f-container">
+<div class="container">
 
-  <div class="row ic4f-contact-row">
-    <div class="col">
-      social media
+  <div class="row ic4f-top-row">
+    <div class="col-sm-4 ic4f-logo">
+      <a href="/">i<span class="part-c">c</span><span class="part-ode">ode</span>4<span class="part-dot">.</span>f<span class="part-un">un</span></a>
     </div>
-  </div>
-
-  <div class="row ic4f-logo-row">
-    <div class="col-sm-4">
-      <a class="ic4f-logo" href="/">i<span class="part-c">c</span><span class="part-ode">ode</span>4<span class="part-dot">.</span>f<span class="part-un">un</span></a>
-    </div>
-    <div class="col-sm-8 ic4f-nav-container">
-
+    <div class="col-sm-8">
       <nav class="ic4f-nav">
         <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">blog</a>
         <a routerLink="projects" routerLinkActive="active">projects</a>
@@ -26,7 +19,7 @@
 
 <div class="ic4f-hline"></div>
 
-<div class="container ic4f-container">
+<div class="container">
   <div class="row">
     <div class="col ic4f-content">
       <h1 class="ic4f-main-heading">{{ title }}</h1>
@@ -39,7 +32,7 @@
 
 <div class="ic4f-hline"></div>
 
-<div class="container ic4f-container">
+<div class="container">
   <div class="row">
     <div class="col ic4f-footer"></div>
   </div>
