--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,1 +1,18 @@
+$blue:   #1E76D4; /* links, link buttons, logo hover, showless button hover */
+$blue5:  #1E76D4; /* c in logo, hover in nav, active in nav */
+$blue40: #4a91dc; /* show less button */
 
+$green:  #26a300; /* link hover */
+
+$gray:   #666;    /* main font color */
+$gray8:  #777;    /* logo hover */
+$gray2:  #999;    /* logo, image border, footer */
+$gray3:  #aaa; /* nav link */
+$gray5:  #eaeaea; /*border on hove in nav, h-line */
+$gray6:  #e4e4e4; /* long quote line */
+$gray7:  #f8f8f8; /* table stripes */
+
+$yellow1: #fffded; /* project detail # background */
+
+
+$blue30: #007bff; /* bootstrap  not used */
