--- a/src/app/projects/project-list.component.html
+++ b/src/app/projects/project-list.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="projects">
 
   <p>This list is approximate. Some projects are tiny, yet delightful is some way (tree traversals in
-Java, publication list generator in Ruby, Vim plugins), others can be large but similar (all the
-content management systems). But the list is representative of what I've built so far.
+  Java, publication list generator in Ruby, Vim plugins), others can be large but similar (all the
+  content management systems). But the list is representative of what I've built so far.
   </p>
 
 
-  <div class="form-row ic4f-h-filter-container">
+  <div class="form-row ic4f-filter">
     <div class="col">
       <div class="form-row">
         <div class="col-sm-3">
@@ -53,7 +53,7 @@ content management systems). But the list is representative of what I've built s
       </div>
     </div>
     <div class="col-auto">
-      <button class="btn btn-light ic4f-reset" (click)="reset()">reset</button>
+      <button class="btn btn-light" (click)="reset()">reset</button>
     </div>
   </div>
 
@@ -73,8 +73,8 @@ content management systems). But the list is representative of what I've built s
 
       <ng-container *ngIf="!displayedProjects.has(p._id)">
         <td class="text-center">{{i+1}}</td>
-        <td class="cell-project" [innerHtml]="getName(p)"></td>
-        <td class="cell-years">{{ p.year_start | yearSpan: p.year_end }}</td>
+        <td [innerHtml]="getName(p)"></td>
+        <td class="text-center cell-years">{{ p.year_start | yearSpan: p.year_end }}</td>
         <td>
           {{ p.description }}
           <button (click)="showDetail(p._id)" class="btn btn-link showmore" *ngIf="p.has_content">show more</button>
