--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,31 +1,16 @@
 @import "~variables.scss";
 
+/* ----------------- common syles ------------------- */
+html { 
+  margin-left: calc(100vw - 100%); /* prevents 'jumping' caused by scroll bar */
+} 
 
-
-html { margin-left: calc(100vw - 100%); } /* prevents 'jumping' caused by scroll bar */
-
-
-@import url('https://fonts.googleapis.com/css?family=Handlee|Raleway:300');
-
-$gray1:  #555;
-$gray2:  #999;
-$gray3:  #aaa;
-$gray4:  #ccc;
-$gray5:  #eaeaea;
-$gray6:  #f1f1f1;
-$gray7:  #f8f8f8;
-$gray8:  #777;
-$blue:   #1E76D4;
-$blue2: $blue * .9;
-$blue3: green; /* bootstrap  ?????*/
-$blue5:   #1E76D4;
-$blue15: #4f9ce8;
-$green:  #26a300;
-$blue30: #007bff; /* bootstrap */
-$blue40: #4a91dc; /* this is the C in the logo. Maybe replace blue2? */
-
-
-
+body {
+  color: $gray; 
+  font-family: verdana, sans-serif;
+  font-size: .95rem;
+  line-height: 1.4rem;
+}
 
 a {
   color: $blue;
@@ -35,347 +20,7 @@ a:hover {
   color: $green;
 }
 
-table.table-striped>tbody>tr:nth-child(odd)>td,
-table.table-striped>tbody>tr:nth-child(odd)>th,
-tr.found{
-  background-color: $gray7;  
-}
-
-.ic4f-h-filter-container {
-  margin-bottom: .5em;
-
-  select, option, button {
-  }
-
-  div {
-    margin-bottom: .5em;
-  }
-  button.ic4f-reset {
-    color: #495057; /* bootsrap custom select */
-    border: 1px solid #ced4da; /*bootstrap custom select */
-    height: calc(2.25rem + 2px);/*bootstrap custom select */
-  }
-
-}
-
-
-
-table.ic4f-projects {
-  font-size: .9em;
-
-  button.btn-link {
-    color: $blue;
-  }
-
-
-
-
-
-
-  th {
-    white-space: nowrap;
-  }
-
-  td {
-    padding: 6px;
-  }
-
-  .cell-project {
-    color: #666;
-
-    a {
-      color: $blue2;
-      display: block;
-    }
-
-    a:hover {
-      text-decoration: none;
-    }
-
-  }
-
-  .cell-years {
-    text-align: center;
-    white-space: nowrap;
-  }
-
-  .cell-db {
-    text-align: center;
-    width: 5em;
-  }
-
-  .cell-project-detail-num {
-    background: #fffded!important;
-  }
-
-  .cell-project-detail {
-    padding: 1.5em!important;
-    /*  background: #fffded!important; */
-  }
-
-  .project-name {
-    font-weight: bold;
-    display: block;
-    line-height: 1.3em;
-  }
-
-  .project-count {
-    @extend .project-name;
-    white-space: nowrap;
-  }
-
-  .project-comment-repo {
-    color: $blue;
-    font-size: 0.8em;
-    display: block;
-    line-height: 1em;
-  }
-
-  .project-comment-oldcode {
-    @extend .project-comment-repo;
-    color: $gray8;
-  }
-
-  .cell-codelink {
-    font-size: .85em;
-    line-height: 1.2em;
-
-    a {
-      display: block;
-      width: 100%;
-      padding: .5em 0 .5em 0;
-      /* color: $blue30; */
-    }
-  }
-
-  .github {
-    font-weight: bold;
-  }
-
-  .show-more-less {
-    font-size: .85em;
-  }
-
-
-  .xscreenshots2 {
-    padding-left: 10%;
-    padding-right: 10%;
-
-    img {
-      margin-top: 1em;
-      margin-bottom: 1em;
-    }
-  }
-  .xscreenshot {
-    padding-left: 10%;
-    padding-right: 10%;
-  }
-
-
-}
-
-
-
-
-
-
-
-$tmp42: $blue;
-
-.cell-project-detail {
-
-  .btn-showless {
-    float: right;
-    background: $blue40;
-  }
-  .btn-showless:hover {
-    background: $blue;
-  }
-
-  .project-summary {
-
-    margin-top: 1.5em;
-    margin-bottom: 1em;
-
-    .subheading {
-      font-weight: bold;
-    }
-
-    p {
-      margin-bottom: .3em;
-    }
-  }
-
-
-  .screenshots {
-    padding: 0 5%;
-    text-align: center;
-
-    img {
-      margin: 1em 0;
-    }
-
-    img.noborder {
-      border: 0px #fff solid!important;
-    }
-  }
-
-  .long-quote {
-    border-left: 10px #e4e4e4 solid;
-    padding-left: 1em;
-    margin-left: .5em;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.ic4f-contact-row {
-  text-align: right;
-  margin-top: 8px;
-  visibility: hidden; /* TODO */
-
-  a {
-    color: $gray3;
-    display: inline-block;
-    font-size: .8rem;
-    padding: 0 10px 0 0;
-    margin: 0;
-  }
-  a:hover {
-    color: $blue;
-  }
-}
-
-.ic4f-logo-row {
-  margin-top: 0px;
-
-  a.ic4f-logo {
-    font-size: 3rem;
-    color: #999;
-  }
-
-  a.ic4f-logo:hover {
-    text-decoration: none;
-    color: $blue;
-
-    .part-c,
-    .part-ode {
-      color:$gray8;
-    }
-  }
-
-  .part {
-    font-size: .7rem;
-  }
-
-  .part-c {
-    color: $blue5;
-    opacity: .8;
-  }
-
-  .part-ode {
-    @extend .part;
-    margin-left: -1px;
-    margin-right: -5px;
-    color: $blue5; 
-  }
-
-  .part-dot {
-    @extend .part;
-    margin-left: -3px;
-  }
-
-  .part-un {
-    @extend .part;
-    margin-left: -3px;
-  }
-}
-
-.ic4f-nav {
-  /*  font-family: 'Raleway', sans-serif; */
-  font-size: 1.1rem;
-  padding: 0;
-  text-align: right;
-  margin-top:10px;
-
-  a {
-    color: #aaa;
-    margin: 0;
-    padding: .2rem .5rem;
-    text-decoration: none;
-  }
-  a:hover {
-    color: $blue; 
-
-    border-top: 1px solid $gray5;
-  }
-  a.active {
-    color: $blue5;
-    font-weight: normal;
-  }
-  a.active:hover {
-  }
-}
-
-
-
-
-
-body {
-  color: $gray1;
-  font-family: verdana, sans-serif;
-  font-size: .95rem;
-  line-height: 1.4rem;
-}
-
-.ic4f-container {}
-
-.ic4f-main-heading {
-  margin: .3em 0 .6em 0;
-}
-
-
-.ic4f-hline {
-  background: $gray5;
-  height: 1px;
-}
-
-.ic4f-content {
-  margin-bottom: 1rem;
-  margin-top: 1.8rem;
-
-  img {
-    border: 1px solid $gray2;
-  }
-}
-
-.ic4f-footer {
-  color: $gray2;
-  font-size: .8rem;
-  padding-bottom: 1.5rem;
-  padding-top: .7rem;
-  text-align: right;
-}
-
-
-
-
 h1 {
-  color: #666;
   font-size: 1.6rem;
 }
 
@@ -396,76 +41,128 @@ h4, h5, h6 {
   font-weight: bold;
 }
 
+table.table-striped>tbody>tr:nth-child(odd)>td,
+table.table-striped>tbody>tr:nth-child(odd)>th,
+tr.found {
+  background-color: $gray7;  
+}
 
-.ic4f-blog-date {
+.ic4f-top-row {
+  margin-top: 30px;
+}
+
+.ic4f-hline {
+  background: $gray5;
+  height: 1px;
+}
+
+.ic4f-content {
+  margin: 1.8rem 0 1rem 0;
+
+  img {
+    border: 1px solid $gray2;
+  }
+}
+
+.ic4f-main-heading {
+  margin: .3em 0 .6em 0;
+}
+
+.ic4f-footer {
   color: $gray2;
   font-size: .8rem;
-  margin: -10px 0 5px 0;
+  padding: .7rem 0 1.5rem 0;
+  text-align: right;
 }
+/* ------------- end of common styles ---------------- */
 
-.ic4f-blog-list-date {
-  color: $gray2;
-  font-size: .8rem;
-  margin-bottom: 0;
-  line-height: 1rem;
-}
-
-.ic4f-blog-list-excerpt {
-  font-size: .9rem;
-}
-
-.ic4f-blog-list-more {
-  font-size: .8rem;
-}
-
-.ic4f-blog-list-title {
-  font-size: 1.1rem;
-  margin: 0;
-
+/* -----------------------logo ----------------------- */
+.ic4f-logo {
   a {
-    color: $blue;
-  }
-  a:hover {
-    color: red; 
-  }
-}
-
-.ic4f-blog-sidebar {
-
-  h2 {
-    font-size: 1rem;
+    font-size: 3rem;
     color: $gray2;
   }
 
+  a:hover {
+    text-decoration: none;
+    color: $blue;
+
+    .part-c,
+    .part-ode {
+      color:$gray8;
+    }
+  }
+
+  .part {
+    font-size: .7rem;
+  }
+
+  .part-c {
+    color: $blue5;
+    opacity: .8;
+  }
+
+  .part-ode {
+    @extend .part;
+    margin: 0 -5px 0 -1px;
+    color: $blue5; 
+  }
+
+  .part-dot {
+    @extend .part;
+    margin-left: -3px;
+  }
+
+  .part-un {
+    @extend .part;
+    margin-left: -3px;
+  }
+}
+/* ------------------ end of logo -------------------- */
+
+/* -------------------- top nav ---------------------- */
+.ic4f-nav {
+  font-size: 1.1rem;
+  text-align: right;
+  margin-top: 10px;
+
+  a {
+    color: $gray3;
+    padding: .2rem .5rem;
+    text-decoration: none;
+  }
+  a:hover {
+    color: $blue; 
+    border-top: 1px solid $gray5;
+  }
+
+  a.active {
+    color: $blue5;
+  }
+}
+/* -----------------end of top nav ------------------- */
+
+/* ------------------ about page --------------------- */
+.ic4f-sergey {
+  text-align: center;
+
+  img {
+    width: 85%;
+  }
+
   ul {
-    font-size: .8rem;
-    line-height: 1rem;
-    padding-left: 1.1rem;
+    padding: 0;
+    margin-top: 1em;
   }
 
   li {
-    margin-bottom: .5rem;
-
-    a.active {
-      color: $blue;
-    }
-    a.active:hover {
-      color: red;
-    }
-  }
-
-  li:last-child {
-    list-style: none;
-
-    a {
-      color: $gray2;
-    }
-    a:hover {
-      color: $blue;
-    }
+    display: inline-block;
+    margin: 0 .8em;
   }
 }
+/* --------------- end of about page ----------------- */
 
+/* ------------------ project list ------------------- */
 .lang-bash { color: #8c4444; }
 .lang-c { color: #ff3d3d; }
 .lang-cs { color: #008080; }
@@ -484,64 +181,116 @@ h4, h5, h6 {
 .lang-vimscript { color: #217f40; }
 .lang-yaml { color: #6191aa; }
 
-
-
-
-
-
-
-
-
 .selectedLanguage {
   font-weight: bold;
 }
 
+.ic4f-filter {
+  margin-bottom: 1.5em; 
 
-.showmore2 {
-  font-size: .85em;
-  display: block;
-  padding: 0 .5em!important;
+  button {
+    color: #495057; /* bootsrap custom select */
+    border: 1px solid #ced4da; /*bootstrap custom select */
+    height: calc(2.25rem + 2px);/*bootstrap custom select */
+  }
 }
 
-.showmore {
-  padding: 0!important;
-  margin: 0!important;
+table.ic4f-projects {
   font-size: .9em;
-  font-weight: bold;
-  display: block;
-}
 
-
-
-
-
-
-table.tablesummary td {
-  background-color: white;
-}
-
-
-
-.ic4f-sergey {
-
-  text-align: center;
-  img {
-    width: 85%;
+  button.btn-link {
+    color: $blue;
   }
 
-  ul {
+  td {
+    padding: 0.5em;
+  }
+
+  .cell-years {
+    white-space: nowrap;
+  }
+
+  .cell-codelink {
+    font-size: .85em;
+    line-height: 1.2em;
+
+    a {
+      display: block;
+      width: 100%;
+      padding: .5em 0 .5em 0;
+    }
+  }
+
+  .project-count {
+    font-weight: bold;
+    display: block;
+    line-height: 1.3em;
+    white-space: nowrap;
+  }
+
+  .showmore {
     padding: 0;
-    margin-top: 1em;
+    font-size: .9em;
+    font-weight: bold;
+    display: block;
   }
-  li {
-    display: inline-block;
-    margin-left: .8em;
-    margin-right: .8em;
+  .showmore:hover {
+    color: $green;
+  }
+
+  .github {
+    font-weight: bold;
   }
 }
+/* -------------- end of project list ---------------- */
 
 
+/* ---------------- project detail ------------------- */
+.cell-project-detail-num {
+  background: $yellow1;
+}
 
+.cell-project-detail {
+  padding: 1.5em;
 
+  .btn-showless {
+    float: right;
+    background: $blue40;
+  }
+  .btn-showless:hover {
+    background: $blue;
+  }
 
+  .project-summary {
+    margin: 1.5em 0 1em 0;
+
+    .subheading {
+      font-weight: bold;
+    }
+
+    p {
+      margin-bottom: .3em;
+    }
+  }
+
+  .screenshots {
+    padding: 0 5%;
+    text-align: center;
+
+    img {
+      margin: 1em 0;
+    }
+
+    img.noborder {
+      border: 0px #fff solid;
+    }
+  }
+
+  .long-quote {
+    border-left: 10px $gray6 solid;
+    padding-left: 1em;
+    margin-left: .5em;
+  }
+}
+/* ------------ end of project detail ---------------- */
 
