Fix styling of project detail view.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -251,7 +251,7 @@ table.ic4f-projects {
 }
 
 .cell-project-detail {
-  padding: 1.5em;
+  padding: 1.5em!important;
 
   .btn-showless {
     float: right;
