--- a/src/styles.scss
+++ b/src/styles.scss
@@ -251,7 +251,7 @@ table.ic4f-projects {
 }
 
 .cell-project-detail {
-  padding: 1.5em;
+  padding: 1.5em!important;
 
   .btn-showless {
     float: right;
@@ -260,6 +260,9 @@ table.ic4f-projects {
   .btn-showless:hover {
     background: $blue;
   }
+}
+
+.ic4f-project-detail {
 
   .project-summary {
     margin: 1.5em 0 1em 0;
