Correct page title error caused by lazy loading of projects module.

--- a/src/app/pages/about-page.component.html
+++ b/src/app/pages/about-page.component.html
@@ -1,3 +1,4 @@
+<h1 class="ic4f-main-heading">About</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
 et dolore magna aliqua. Etiam tempor orci eu lobortis elementum nibh tellus. Mi ipsum faucibus vitae
 aliquet nec ullamcorper sit amet. Quis lectus nulla at volutpat diam ut venenatis tellus in.
@@ -22,9 +23,9 @@ vitae.
 
     <ul>
       <li><a href="mailto:sgolitsynskiy@gmail.com">Email</a>
-      <li><a href="https://github.com/ic4f">GitHub</a>
-      <li><a href="https://www.linkedin.com/in/sgolitsynskiy">LinkedIn</a>
-      <li><a href="https://www.facebook.com/sergey.golitsynskiy">Facebook</a>
+        <li><a href="https://github.com/ic4f">GitHub</a>
+          <li><a href="https://www.linkedin.com/in/sgolitsynskiy">LinkedIn</a>
+            <li><a href="https://www.facebook.com/sergey.golitsynskiy">Facebook</a>
     </ul>
 
   </div>
