--- a/src/app/projects/project-list.component.html
+++ b/src/app/projects/project-list.component.html
@@ -1,3 +1,4 @@
+<h1 class="ic4f-main-heading">Selected Projects</h1>
 <ng-container *ngIf="projects">
 
   <p>This list is approximate. Some projects are tiny, yet delightful is some way (tree traversals in
